--- a/documents/organization.tex
+++ b/documents/organization.tex
@@ -24,8 +24,8 @@
 \input{./setup/abbrevix.tex}
 
 
-\makeindex                                % generate index
-\makeabbex                                % generate abbreviations
+\makeindex{}                                % generate index
+\makeabbex{}                                % generate abbreviations
 
 
 %\newcommand{\sectionbreak}{\clearpage}
@@ -54,7 +54,7 @@
 	\input{pages/organization/GeneralRules}
 	\input{pages/organization/Setup}
 
-	\printabx
-	\printidx
+	\printabx{}
+	\printidx{}
 
 \end{document}
