--- a/documents/roadmap.tex
+++ b/documents/roadmap.tex
@@ -25,8 +25,8 @@
 
 
 
-\makeindex                                % generate index
-\makeabbex                                % generate abbreviations
+\makeindex{}                                % generate index
+\makeabbex{}                                % generate abbreviations
 
 
 
@@ -57,7 +57,7 @@
 
 
 
-\printabx
-\printidx
+\printabx{}
+\printidx{}
 
 \end{document}
