--- a/documents/rulebook.tex
+++ b/documents/rulebook.tex
@@ -25,8 +25,8 @@
 
 
 
-\makeindex                                % generate index
-\makeabbex                                % generate abbreviations
+\makeindex{}                                % generate index
+\makeabbex{}                                % generate abbreviations
 
 
 
@@ -66,8 +66,7 @@
 
 %%% STAGE I
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Tests in Stage I}
-\label{chap:stage_I}
+\chapter{Tests in Stage I}\label{chap:stage_I}
 
 \testtocentry{test:carry-my-luggage}
 \testtocentry{test:gpsr}
@@ -78,15 +77,15 @@
 
 
 % Uncomment to get aesthetic improvement
-\cleardoublepage
+\cleardoublepage{}
 \input{tasks/CarryMyLuggage}
-\newpage
+\newpage{}
 \input{tasks/GPSR}
-\newpage
+\newpage{}
 \input{tasks/Receptionist}
-\newpage
+\newpage{}
 \input{tasks/ServeBreakfast}
-\newpage
+\newpage{}
 \input{tasks/StoringGroceries}
 
 
