--- a/general_rules/ContinueRules.tex
+++ b/general_rules/ContinueRules.tex
@@ -1,11 +1,9 @@
-\section[Deus Ex Machina]{Deus Ex Machina: Bypassing Features With Human Help \\ \small Because the Show Must Go On}
-\label{rule:continue}
+\section[Deus Ex Machina]{Deus Ex Machina: Bypassing Features With Human Help \\ \small Because the Show Must Go On}\label{rule:continue}
 Robots can't score unless they accomplish the main goal of a task.
 However, in many real-life situations, a minor malfunction may prevent the robot from accomplishing a task.
 To prevent this situation, while fostering awareness and human-robot interaction, robots are allowed to request human assistance during a test.
 
-\subsection{Procedure}
-\label{rule:continue_procedure}
+\subsection{Procedure}\label{rule:continue_procedure}
 The procedure to request human assistance while solving a task is as follows:
 
 \begin{enumerate}
@@ -23,8 +21,7 @@ The procedure to request human assistance while solving a task is as follows:
 	\item \textbf{Acknowledge:} The robot must politely thank the human for the assistance provided.
 \end{enumerate}
 
-\subsection*{Example}
-\label{rule:continue_example}
+\subsection*{Example}\label{rule:continue_example}
 In the following example, a robot has to clean the table but is unable to grasp the spoon.
 \begin{itemize}[noitemsep]
 	\small
@@ -46,8 +43,7 @@ In the following example, a robot has to clean the table but is unable to grasp 
 \end{itemize}
 
 
-\subsection{Scoring}
-\label{rule:continue_scoring}
+\subsection{Scoring}\label{rule:continue_scoring}
 There is no limit in the amount of times a robot can request human assistance, but score reduction applies every time it is requested.
 
 \begin{enumerate}
@@ -69,8 +65,7 @@ There is no limit in the amount of times a robot can request human assistance, b
 	For instance, if a task focused on manipulation does not explicitly mention a Deus Ex Machina penalty for instructing a person to perform a manipulation activity, it should not be assumed that this is a loophole that can be exploited.
 \end{enumerate}
 
-\subsection{Bypassing Automatic Speech Recognition}
-\label{rule:asrcontinue}
+\subsection{Bypassing Automatic Speech Recognition}\label{rule:asrcontinue}
 Giving commands to the robot is essential in many tests.
 When the robot is not able to receive spoken commands, teams are allowed to provide means to bypass ASR via an Alternative method for HRI (see~\refsec{rule:asralternative}).
 Nonetheless, Automatic Speech Recognition is preferred.
@@ -93,8 +88,7 @@ The following rules apply in addition to the ones specified in section \refsec{r
 \end{enumerate}
 
 
-\subsubsection{Alternative interfaces for HRI}
-\label{rule:asralternative}
+\subsubsection{Alternative interfaces for HRI}\label{rule:asralternative}
 Alternative methods and interfaces for HRI offer a way for a robot to start or complete a task.
 Any reasonable method may be used, with the following criteria:
 \begin{itemize}
