--- a/general_rules/ExternalDevices.tex
+++ b/general_rules/ExternalDevices.tex
@@ -3,10 +3,9 @@
 % External Devices
 %
 % %% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{External devices}
-\label{rule:robot_external_devices}
+\section{External devices}\label{rule:robot_external_devices}
 
-Everything that a team uses during a test and is not part of the robot is considered an \ExternalDevice.
+Everything that a team uses during a test and is not part of the robot is considered an \ExternalDevice{}.
 All \ExternalDevices{} must be authorized by the \TC{} during the \RobotInspection{} test (see~\refsec{sec:robot_inspection}).
 The TC specifies whether an \ExternalDevice{} can be used freely or under referee supervision, and determines its impact on scoring.
 
@@ -31,8 +30,7 @@ Interacting with anything in the ECRA after the referee has given the start sign
 
 If a laptop is used as \ExternalComputing, a team can only place it in the ECRA if their \Testslot{} is up next and must remove the device immediately after the test.
 
-\subsection{On-line external computing}
-\label{rule:robot_external_computing_online}
+\subsection{On-line external computing}\label{rule:robot_external_computing_online}
 
 Teams are allowed to use \ExternalComputing{} through the internet connection of the \ArenaNetwork{}; this includes cloud services or online APIs.
 These must be announced to and approved by the TC one month prior to the competition.
