--- a/general_rules/ManipulationChallenge.tex
+++ b/general_rules/ManipulationChallenge.tex
@@ -1,5 +1,4 @@
-\section{Manipulation Challenge}
-\label{sec:rules:manipulationChallenge}
+\section{Manipulation Challenge}\label{sec:rules:manipulationChallenge}
 
 In cooperation with MathWorks and together with the RoboCup@Work league, an additional technical manipulation challenge is offered to \AtHome{} teams starting from 2022. The objective is to use a manipulator, programmed in MATLAB and Simulink, for sorting objects that lie on a table into separate bins near the manipulator. This year, the challenge is simulation-based, using Gazebo as a simulation environment. The overall winner of the challenge will receive a research grant of up to \$5,000; all other participants will receive a certificate of participation.
 
