--- a/general_rules/Organization.tex
+++ b/general_rules/Organization.tex
@@ -1,6 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Organization of the Competition}
-\label{sec:procedure_during_competition}
+\section{Organization of the Competition}\label{sec:procedure_during_competition}
 
 \subsection{Stage System}\label{rule:stages}
 
@@ -24,8 +23,7 @@ In case of having no considerable score deviation between a team advancing to th
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Schedule}
-\label{rule:schedule}
+\subsection{Schedule}\label{rule:schedule}
 
 \begin{enumerate}
 	\item \textbf{Test Blocks:} For each test one Test Block is scheduled during which each (qualified) team gets at least two Test Slots assigned. With the Restaurant test being the exception where only one Test Slot is assigned.
@@ -121,10 +119,9 @@ In case of having no considerable score deviation between a team advancing to th
 	\label{tbl:schedule}
 \end{table}
 
-\noindent Note that the actual allocation of blocks will be announced by the OC during the \SetupDays{} (see Table \ref{tbl:schedule}).
+\noindent Note that the actual allocation of blocks will be announced by the OC during the \SetupDays{} (see Table~\ref{tbl:schedule}).
 
-\subsection{Scoring System}
-\label{rule:score_system}
+\subsection{Scoring System}\label{rule:score_system}
 
 Each task has a main objective and a set of bonus scores.
 To score in a test, a team must successfully accomplish the main objective of the task; bonuses are not awarded otherwise.
