--- a/general_rules/Procedure.tex
+++ b/general_rules/Procedure.tex
@@ -1,18 +1,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Procedure during Tests}
 
-\subsection{Safety First!}
-\label{rule:safetyfirst}
+\subsection{Safety First!}\label{rule:safetyfirst}
 \begin{enumerate}
 	\item \textbf{Emergency Stop:} At any time when operating the robot inside and outside the scenario the owners have to stop the robot immediately if there is a possibility of dangerous behavior towards people and/or objects.
 	\item \textbf{Stopping on request:} If a referee, member of the Technical or Organizational committee, an Executive or Trustee of the federation stops the robot (by pressing the emergency button) there will be no discussion. Similarly if they tell the team to stop the robot, the robot must be stopped \emph{immediately}.
-	\item \textbf{Penalties:} If the team does not comply, the team and its members will be excluded from the ongoing competition immediately by a decision of the RoboCup@Home \iaterm{Technical Committee}{TC}. 	Furthermore, the team and its members may be banned from future competitions for a period not less than a year by a decision of the RoboCup Federation Trustee Board.
+	\item \textbf{Penalties:} If the team does not comply, the team and its members will be excluded from the ongoing competition immediately by a decision of the RoboCup@Home \iaterm{Technical Committee}{TC}. Furthermore, the team and its members may be banned from future competitions for a period not less than a year by a decision of the RoboCup Federation Trustee Board.
 \end{enumerate}
 
-\subsection{Maximum number of team members}
-\label{rule:number_of_people}
+\subsection{Maximum number of team members}\label{rule:number_of_people}
 \begin{enumerate}
-	\item \textbf{Regular Tests:} During a regular test, the maximum number of team members allowed inside the \Arena{} is \emph{one} (1).
+	\item \textbf{Regular Tests:} During a regular test, the maximum number of team members allowed inside the \Arena{} is \emph{one}~(1).
 	Exceptions are tests that explicitly require volunteer assistance.
 	\item \textbf{Setup:} During the setup of a test, the number of team members inside the \Arena{} is not limited.
 	% \item \textbf{Open Demonstrations:} During the \iterm{Open Challenge} \iterm{Demo Challenge}, and the \iaterm{final demonstration}{Finals}, the number of team members inside the arena is not limited.
@@ -20,8 +18,7 @@
 	\item \textbf{\FINAL:} During the \FINAL, the number of team members inside the \Arena{} is not limited.
 \end{enumerate}
 
-\subsection{Fair play}
-\label{rule:fairplay}
+\subsection{Fair play}\label{rule:fairplay}
 \iterm{Fair Play} and cooperative behavior is expected from all teams during the entire competition, in particular:
 \begin{itemize}
 	\item while evaluating other teams,
@@ -48,14 +45,14 @@ Hence, interaction should be as with any other human being.
 
 \subsection{Robot Autonomy and Remote Control}
 \begin{enumerate}
-	\item \textbf{No touching:} During a test, the participants are not allowed to make contact with the robot(s), unless it is in a \enquote{natural} way and required by the task.
+	\item \textbf{No touching:} During a test, the participants are not allowed to make contact with the robot(s), unless it is in a \enquote{natural} way and required by the task. % chktex 36
 
-	\item \textbf{Natural interaction:} The only allowed means to interact with the robot(s) are gestures and speech.
+	\item \textbf{Natural interaction:} The only allowed means to interact with the robot(s) are gestures and speech. % chktex 36
 
 	\item \textbf{Natural commands:} Anything that resembles direct control is forbidden.
 
 	\item \textbf{Remote Control:} Remotely controlling the robot(s) is strictly prohibited.
-	This also includes pressing buttons, or influencing sensors on purpose.
+	This also includes pressing buttons, or influencing sensors on purpose. % chktex 36
 
 	\item \textbf{Penalties:} Disregard of these rules will lead to disqualification for a test or for the entire competition.
 \end{enumerate}
@@ -78,8 +75,7 @@ Hence, interaction should be as with any other human being.
 
 
 
-\subsection{Removal of robots}
-\label{rule:robot_removal}
+\subsection{Removal of robots}\label{rule:robot_removal}
 Robots not obeying the rules are stopped and removed from the \Arena{}.
 \begin{enumerate}
 	\item It is the decision of the referees and the TC member monitoring the test if and when to remove a robot.
@@ -91,8 +87,7 @@ Robots not obeying the rules are stopped and removed from the \Arena{}.
 \end{enumerate}
 
 
-\subsection{Start signal}
-\label{rule:start_signal}
+\subsection{Start signal}\label{rule:start_signal}
 The default \iterm{start signal} (unless stated otherwise) is \iterm{door opening}.
 Other start signals are allowed but must be authorized by the \iaterm{Technical Committee}{TC} during the Robot Inspection (see~\refsec{sec:robot_inspection}).
 
@@ -130,8 +125,7 @@ Other start signals are allowed but must be authorized by the \iaterm{Technical 
 
 
 
-\subsection{Gestures}
-\label{rule:gestures}
+\subsection{Gestures}\label{rule:gestures}
 Hand gestures may be used to control the robot in the following way:
 \begin{enumerate}
 	\item \textbf{Definition:} The teams define the hand gestures by themselves.
@@ -152,27 +146,23 @@ Hand gestures may be used to control the robot in the following way:
 
 
 
-\subsection{Referees}
-\label{rule:referees}
+\subsection{Referees}\label{rule:referees}
 All tests are monitored by a referee, who is a member of the \iaterm{Technical Committee}{TC}. The referee may appoint an assistant to aid in keeping time and filling in scoresheets. 
 The following rules apply:
 
 \begin{enumerate}
 	\item \textbf{Selection:} Referees are chosen by EC/TC/OC.
-
 	\item \textbf{Referee instructions:} Right before each test, referee chooses one or more assistant to aid during the test. The assistants will be instructed by the referee.
 \end{enumerate}
 
 
-\subsection{Operators}
-\label{rule:operator}
+\subsection{Operators}\label{rule:operator}
 Unless stated otherwise, robots are operated by the referee or by a person selected by the referee.
 If the robot fails to understand the default operator, the team may request the use of a custom operator.
 Penalty may apply when using a custom operator.
 
 
-\subsection{Time limits}
-\label{rule:time_limits}
+\subsection{Time limits}\label{rule:time_limits}
 \begin{enumerate}
 	\item \textbf{Stage~I:} Unless stated otherwise, the time limit for each test in \iterm{Stage~I} is \timing{5 minutes}.
 
@@ -189,7 +179,7 @@ Penalty may apply when using a custom operator.
 	\item \textbf{Setup time:} Unless stated otherwise, there is no setup time.
 	Robots need to be ready to enter the \Arena{} no later than one minute after the door has been closed to the former team.
 
-	\item \textbf{Time-up:} When the time is up, the team must immediately remove their robot(s) from the  \Arena{}.
+	\item \textbf{Time-up:} When the time is up, the team must immediately remove their robot(s) from the \Arena{}. % chktex 36
 	No more additional score will be giving.
 
 	\item \textbf{Show must go on:} On special cases, the referee may let the robot continue the test for demonstration purposes, but no additional points will be scored.
