--- a/general_rules/Robots-SPL.tex
+++ b/general_rules/Robots-SPL.tex
@@ -8,8 +8,7 @@ Robots are, however, allowed to \enquote{wear} clothes, have stickers (such as a
 All modifications to the robots will be examined during the \RobotInspection{} (see \ref{sec:robot_inspection}).
 Note that the EC and TC members may request re-inspection of an SPL robot at any time during the competition.
 
-\subsubsection{Authorized DSPL Modifications}
-\label{rule:osl_dspl}
+\subsubsection{Authorized DSPL Modifications}\label{rule:osl_dspl}
 
 In the \DSPL{}, teams may use an external laptop, which is safely located in the official \MountingBracket{} provided by Toyota and is connected to the \HSR{} via an Ethernet cable.
 Any laptop fitting inside the \MountingBracket{} is allowed to be used, regardless of its technical specification.
