--- a/general_rules/Robots.tex
+++ b/general_rules/Robots.tex
@@ -1,18 +1,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Robots}
-\label{rule:robots}
+\section{Robots}\label{rule:robots}
 
-\subsection{Number of Robots}
-\label{rule:robots_number}
+\subsection{Number of Robots}\label{rule:robots_number}
 
 \begin{enumerate}
 	\item \textbf{Registration:} The maximum \term{number of robots} per team is \emph{two} (2).
 	\item \textbf{Regular Tests:} Only one robot is allowed per test. For different test runs, different robots can be used.
-	\item \textbf{\FINAL:} In the \FINAL, both robots can be used simultaneously.
+	\item \textbf{\FINAL{}:} In the \FINAL{}, both robots can be used simultaneously.
 \end{enumerate}
 
-\subsection{Appearance and Safety}
-\label{rule:robot_appearance}
+\subsection{Appearance and Safety}\label{rule:robot_appearance}
 
 Robots should have a product-like appearance and be safe to operate.
 The following rules apply to all robots:
@@ -24,7 +21,7 @@ The following rules apply to all robots:
 	\item \textbf{Marks:} The robot may not exhibit any kind of artificial marks or patterns.
 	\item \textbf{Driving:} To be safe, the robots should be careful when driving. Obstacle avoidance is mandatory.
 \end{enumerate}
-The compliance with these rules will be verified during \RobotInspection{} (see \ref{sec:robot_inspection}).
+The compliance with these rules will be verified during \RobotInspection{} (see~\ref{sec:robot_inspection}).
 
 \input{general_rules/Robots-SPL}
 
