--- a/general_rules/TeamRegistration.tex
+++ b/general_rules/TeamRegistration.tex
@@ -2,8 +2,7 @@
 \section{Team Registration and Qualification}
 
 
-\subsection{Registration and Qualification Process}
-\label{rule:participation}
+\subsection{Registration and Qualification Process}\label{rule:participation}
 
 Each year, there are three phases in the process towards participation in \AtHome:
 \begin{enumerate}
@@ -15,8 +14,7 @@ The preregistration will be announced by a call for participation sent to the \i
 Preregistration requires a \iterm{team description paper}, a \Term{video}{qualification video} and a \Term{website}{Team Website}.
 The expected contents of these are described below.
 
-\subsection{Team Description Paper}
-\label{rule:website_tdp}
+\subsection{Team Description Paper}\label{rule:website_tdp}
 
 The \TDP{} is an 8-pages long scientific paper, which must include a description of your main research, including the scientific contribution, goals, scope, and results.
 The TDP has to be written in English and formatted using the template of the RoboCup International Symposium without any alterations.
@@ -82,8 +80,7 @@ The requirements for the website are as follows:
 \end{enumerate}
 
 %% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Qualification}
-\label{rule:qualification}
+\subsection{Qualification}\label{rule:qualification}
 
 During the \iterm{qualification process}, a selection will be made by the OC.
 The following points are taken into account and evaluated in the decision process:
@@ -101,8 +98,7 @@ In addition, the following evaluation criteria are considered:
 
 \paragraph{Important note for the Standard Platform Leagues:} Only unmodified robots may compete in Standard Platform Leagues. Any \textit{unathorized} modification made to the robot that are found in the qualification material will automatically disqualify the team in the qualification process. % (see~\refsec{rule:spl-mods}).
 
-\subsection{Participation Confirmation}
-\label{rule:participation-confirmation}
+\subsection{Participation Confirmation}\label{rule:participation-confirmation}
 
 In order to have as many participating teams as possible, qualified teams \emph{must} contact the OC to confirm (or cancel) the participation several months in advance.
 Confirming attendance implies that the team has sufficient resources to register for the competition and commits to attend the event.
