--- a/general_rules/arena_decorations.tex
+++ b/general_rules/arena_decorations.tex
@@ -1,5 +1,4 @@
-\chapter{Arena decorations}
-\label{chap:arena-decorations-appendix}
+\chapter{Arena decorations}\label{chap:arena-decorations-appendix}
 The following is a list or suggestions, not strict requirements, for decorating a RoboCup@Home arena:
 \begin{itemize}
   \item Side table
