--- a/general_rules/vizbox.tex
+++ b/general_rules/vizbox.tex
@@ -1,5 +1,4 @@
-\section{Audience interaction}
-\label{rule:vizbox}
+\section{Audience interaction}\label{rule:vizbox}
 
 Part of making \RoboCup\AtHome{} appealing is to show the audience what robots should do and what they are actually doing during tasks.
 In particular, providing information about what a robot is doing to the audience is important for the advancement of the league.
