--- a/general_rules/Robots-OPL.tex
+++ b/general_rules/Robots-OPL.tex
@@ -1,13 +1,12 @@
-\subsection{Robot Specifications for the Open Platform League }
+\subsection{Robot Specifications for the Open Platform League}
 Robots competing in the RoboCup@Home Open Platform League must comply with security specifications in order to avoid causing any harm while operating.
 
-\subsubsection{Size and Weight}
-\label{rule:robots_size}
+\subsubsection{Size and Weight}\label{rule:robots_size}
 
 \begin{enumerate}
 	\item \textbf{Dimensions:} The dimensions of a robot should not exceed the limits of an average door (\SI{200}{\centi\meter} by \SI{70}{\centi\meter} in most countries).
 	The TC may allow the qualification and registration of larger robots, but, due to local restrictions, it cannot be guaranteed that the robots can actually enter the \Arena{}.
-	In doubt, please contact the \LOC.
+	In doubt, please contact the \LOC{}.
 	\item \textbf{Weight:} There are no specific weight restrictions; however, the weight of the robot and the pressure it exerts on the floor should not exceed local regulations for the construction of offices and/or buildings which are used for living in the country where the competitions is being held.
 	\item \textbf{Transportation:} Team members are responsible for quickly moving the robot out of the \Arena.
 	If the robot cannot move by itself (for any reason), the team members must be able to transport the robot away quickly and easily.
