fix missing refs
- added bonus/penalties section to rulebook
- removed some ref for now as
  wed need to add start_signal but that refers inspection which refers robot sections
  dont know what to move where so removed the refs for now

--- a/CompetitionConcepts.tex
+++ b/CompetitionConcepts.tex
@@ -3,7 +3,7 @@
 
 A set of conceptual key criteria builds the basis for the \textsc{RoboCup@Home} competition.
 These criteria are to be understood as a common agreement on the general concept of the competition.
-The concrete rules are listed in Chapter~\ref{chap:rules}.
+The concrete rules are listed in the \AtHome{} Rules \& Regulations.
 
 \section{Lean Set of Rules}
 \label{concept:lean_set_of_rules}
@@ -68,7 +68,7 @@ The competition should be attractive for the audience and the public; thus, high
 While they have to compete against each other during the competition, the members of the \AtHome{} league are expected to cooperate and exchange knowledge to advance technology together.
 The \iterm{RoboCup@Home mailing list} as well as the \RR{} can be used to get in touch with other teams and to discuss league-specific issues such as rule changes, proposals for new tests, etc.
 % Since 2007 there is also the \iterm{RoboCup@Home Wiki} (see~\refsec{sec:at_home_wiki}) which serves as a central place to collect information relevant for the @Home league.
-In addition, every team is expected to share relevant technical, scientific (and team-related) information in their TDP (see~\refsec{rule:website_tdp}) and on the team's website.
+In addition, every team is expected to share relevant technical, scientific (and team-related) information in a Team Description Paper and on the team's website.
 
 Finally, all teams are invited to submit papers on related research to the \Symp{}, which accompanies the annual RoboCup World Championship.
 
