--- a/general_rules/ContinueRules.tex
+++ b/general_rules/ContinueRules.tex
@@ -111,7 +111,7 @@ Preferably, the alternative HRI must be also adapted to the user.
 Consider localization (with English as the default), but also potential users of service robots at their home.
 For example: elderly people and people with physical disabilities.
 
-\textbf{\textsc{Award:}} The best alternative is awarded the Best Human-Robot Interface award (\refsec{award:hri}).
+%\textbf{\textsc{Award:}} The best alternative is awarded the Best Human-Robot Interface award (\refsec{award:hri}).
 
 
 % Local Variables:
