--- a/general_rules/PenaltiesBonuses.tex
+++ b/general_rules/PenaltiesBonuses.tex
@@ -2,7 +2,6 @@
 \newcommand{\penaltybig}{500~}
 \newcommand{\penaltysmall}{250~}
 
-
 \section{Special penalties and bonuses}\label{sec:special_awards}
 
 \subsection{Penalty for not attending}\label{rule:not_attending}
@@ -17,7 +16,7 @@
 
 \subsection{Extraordinary penalties}\label{rule:extraordinary_penalties}
 \begin{enumerate}
-	\item \textbf{Penalty for cheating:} If a team member is found cheating or breaking the Fair Play rule (see \refsec{rule:fairplay}), the team will be automatically disqualified of the running test, and a penalty of \scoring{\penaltybig points} is handed out.
+	\item \textbf{Penalty for cheating:} If a team member is found cheating or breaking Fair Play, the team will be automatically disqualified of the running test, and a penalty of \scoring{\penaltybig points} is handed out.
 	The \iaterm{Technical Committee}{TC} may also disqualify the team for the entire competition.
 
 	\item \textbf{Penalty for faking robots:} If a team starts a test, but it does not solve any of the partial tasks (and is obviously not trying to do so), a penalty of \scoring{\penaltysmall points} is handed out.
