--- a/general_rules/Procedure.tex
+++ b/general_rules/Procedure.tex
@@ -91,8 +91,7 @@ Robots not obeying the rules are stopped and removed from the \Arena{}.
 \end{enumerate}
 
 
-\subsection{Start signal}
-\label{rule:start_signal}
+\subsection{Start signal}\label{rule:start_signal}
 The default \iterm{start signal} (unless stated otherwise) is \iterm{door opening}.
 Other start signals are allowed but must be authorized by the \iaterm{Technical Committee}{TC} during the Robot Inspection (see~\refsec{sec:robot_inspection}).
 
