--- a/rulebook_pages/GeneralRules.tex
+++ b/rulebook_pages/GeneralRules.tex
@@ -26,9 +26,8 @@ This means that additional or contrary rules, in particular with respect to the 
 
 %\input{general_rules/Procedure}
 
-\input{general_rules/ContinueRules.tex}
-
-%\input{general_rules/PenaltiesBonuses}
+\input{general_rules/ContinueRules}
+\input{general_rules/PenaltiesBonuses}
 
 %\input{general_rules/OpenChallenge}
 
