--- a/scoresheets/Receptionist.tex
+++ b/scoresheets/Receptionist.tex
@@ -9,7 +9,7 @@ The maximum time for this test is 5 minutes.
 	\scoreitem[2]{100}{Offer a free seat to the new guest}
 	\scoreitem[2]{25}{Look at the person talking}
 	\scoreitem[2]{50}{Look at the person the robot is introducing the guest to}
-	\scoreitem{50}{Qualitative robot social performance (see sec. ~\ref{rule:perceived_intelligence})}
+	\scoreitem{50}{Qualitative robot social performance \ifShortScoresheet{(see sec.~\ref{rule:perceived_intelligence})}}
 	
 	\scoreheading{Bonus Rewards}
 	\scoreitem[2]{100}{Open the entrance door for a guest}
