--- a/scoresheets/Restaurant.tex
+++ b/scoresheets/Restaurant.tex
@@ -11,7 +11,7 @@
 
 	\scoreitem[2]{300}{Take an order.}
 	\scoreitem[2]{300}{Serve an order.}
-	\scoreitem{50}{Qualitative robot social performance (see sec. ~\ref{rule:perceived_intelligence})}
+	\scoreitem{50}{Qualitative robot social performance \ifShortScoresheet{(see sec.~\ref{rule:perceived_intelligence})}}
 
 	\scoreheading{Bonus Rewards}
 	\scoreitem[2]{200}{Use an unattached tray to transport}
